[package]
name = "simple_logger"
version = "1.13.1"
license = "MIT"
authors = ["Sam Clements <sam@borntyping.co.uk>"]
description = "A logger that prints all messages with a readable output format"
repository = "https://github.com/borntyping/rust-simple_logger"
edition = "2018"

[features]
default = ["colored", "chrono"]
colors = ["colored"]
timestamps = ["chrono"]
stderr = []

[dependencies]
log = { version = "^0.4.5", features = ["std"] }
chrono = { version = "0.4.6", optional = true }
colored = { version = "^1.6", optional = true }

[target.'cfg(windows)'.dependencies]
atty = "0.2.13"
winapi = { version = "0.3", features = ["handleapi", "winbase"]}

[[example]]
name = "colors"
required-features = ["colored"]

[[example]]
name = "timestamps"
required-features = ["chrono"]
