[package]
name = "simple_logger"
version = "1.16.0"
license = "MIT"
authors = ["Sam Clements <sam@borntyping.co.uk>"]
description = "A logger that prints all messages with a readable output format"
repository = "https://github.com/borntyping/rust-simple_logger"
edition = "2018"

[features]
default = ["colors", "timestamps"]
colors = ["colored"]
threads = []
timestamps = ["time"]
nightly = []
stderr = []

[dependencies]
log = { version = "^0.4.5", features = ["std"] }
time = { version = "0.3.5", features = ["formatting", "local-offset", "macros"], optional = true }
colored = { version = "^1.6", optional = true }

[target.'cfg(windows)'.dependencies]
atty = "0.2.13"
winapi = { version = "0.3", features = ["handleapi", "winbase"]}

[[example]]
name = "colors"
required-features = ["colors"]

[[example]]
name = "threads"
required-features = ["threads"]

[[example]]
name = "timestamps_utc"
required-features = ["timestamps"]

[[example]]
name = "timestamps_local"
required-features = ["timestamps"]
