[package]
name = "simple_logger"
version = "4.3.3"
license = "MIT"
authors = ["Sam Clements <sam@borntyping.co.uk>"]
description = "A logger that prints all messages with a readable output format"
repository = "https://github.com/borntyping/rust-simple_logger"
edition = "2018"

[features]
default = ["colors", "timestamps"]
colors = ["colored"]
threads = []
timestamps = ["time"]
nightly = []
stderr = []

[dependencies]
log = { version = "^0.4.17", features = ["std"] }
time = { version = "^0.3.16", features = ["formatting", "local-offset", "macros"], optional = true }
colored = { version = "2", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "^0.48.0", features = ["Win32_System_Console", "Win32_Foundation"] }

[[example]]
name = "colors"
required-features = ["colors"]

[[example]]
name = "threads"
required-features = ["threads"]

[[example]]
name = "timestamps_local"
required-features = ["timestamps"]

[[example]]
name = "timestamps_none"
required-features = ["timestamps"]

[[example]]
name = "timestamps_utc"
required-features = ["timestamps"]

[[example]]
name = "timestamps_utc_offset"
required-features = ["timestamps"]

[[example]]
name = "timestamps_format"
required-features = ["timestamps"]
